--- a/style/_index_forma.scss
+++ b/style/_index_forma.scss
@@ -1,6 +1,6 @@
 
-// index(section help with form)
-// для страницы онлайн-записи стили отсюда-же
+// index(section help with form)главная страница форма для записи
+// для СТРАНИЦЫ(online) онлайн-записи стили отсюда-же
 
 .help {
     margin-bottom: 6.25rem;
