--- a/style/main.scss
+++ b/style/main.scss
@@ -4,7 +4,7 @@
 @import 'header';
 @import 'top';
 @import 'about';
-@import 'about_me';
+@import 'all_about';
 @import 'my_help';
 @import 'all_help';
 @import 'direct';
