--- a/style/_all_help.scss
+++ b/style/_all_help.scss
@@ -2,47 +2,66 @@
 // страница помощь=============
 
 .all_help_title {
-    margin-bottom: 2.5rem;
-    padding-bottom: 1.25rem;
-    color: $orange-color;
-    font-family: "Montserrat-Medium", sans-serif;
-    font-size: 3rem;
-    font-weight: 500;
-    line-height: 1.87rem;
-    border-bottom: 2px solid $orange-color;
+  margin-bottom: 2.5rem;
+  padding-bottom: 1.25rem;
+  color: $orange-color;
+  font-family: "Montserrat-Medium", sans-serif;
+  font-size: 3rem;
+  font-weight: 500;
+  line-height: 1.87rem;
+  border-bottom: 2px solid $orange-color;
+}
+
+.all_help_card {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  gap: 2.5rem;
+  margin-bottom: 2.5rem;
+  padding: 1.87rem;
+  list-style: none;
+  background-color: $lg_bg;
+  border-radius: 1.56rem;
+
+  &__img > img {
+    width: 100%;
   }
-  
-  .all_help_card {
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-start;
-    gap: 2.5rem;
-    margin-bottom: 2.5rem;
-    padding: 1.87rem;
-    list-style: none;
-    background-color: $lg_bg;
-    border-radius: 1.56rem;
-  }
-  
-  .all_help_card__descript {
+  &__descript {
     max-width: 60%;
     display: flex;
     flex-direction: column;
     gap: 1.25rem;
   }
-  
-  .all_help_card__title {
+
+  &__title {
     color: $black-color;
     font-family: "Montserrat-SemiBold", sans-serif;
     font-size: 1.625rem;
     font-weight: 600;
     line-height: 1.25rem;
   }
-  
-  .all_help_card__text {
+
+  &__text {
     color: $black-color;
     font-family: "Montserrat-Regular", sans-serif;
     font-size: 1.125rem;
     font-weight: 400;
     line-height: 1.87rem;
   }
+}
+
+@media(max-width:1000px) {
+  .all_help_title{
+    line-height: 2.5rem;
+  }
+  .all_help_card{
+    flex-direction: column;
+    &__descript{
+      max-width: 100%;
+    }
+  }
+}
+
+  
+
+  
