--- a/style/_article.scss
+++ b/style/_article.scss
@@ -1,49 +1,77 @@
 
 // страница статья-подробнее
 
-.detail_card {
+.my_article{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  &__title{
+    width: 100%;
+    margin-bottom: 2.5rem;
+    padding-bottom: 1.25rem;
+    color: #eab65c;
+    font-family: "Montserrat-Medium", sans-serif;
+    font-size: 3rem;
+    font-weight: 500;
+    line-height: 2.87rem;
+    border-bottom: 2px solid #eab65c;
+  }
+
+  .detail_card {
     max-width: 90%;
     min-height: 13.75rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-bottom: 1.87rem;
+    padding-top: 10px;
     background-color: $lg-bg;
     border-radius: $b-radius;
+
+    &__wrapp {
+      padding: 1.25rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      flex-direction: column;
+    }
+    
+    &__pic {
+      display: block;
+    }
+    
+    &__img {
+      width: 100%;
+      object-fit: contain;
+    }
+    
+    &__date {
+      margin-bottom: 1.87rem;
+      color: $orange-color;
+      font-family: "Montserrat-Regular", sans-serif;
+      font-size: 1.125rem;
+      font-weight: 400;
+      line-height: 1.87rem;
+    }
+    
+    &__descript {
+      margin-bottom: 1.25rem;
+      font-size: 1rem;
+      margin-bottom: 0.625rem;
+      color: $black-color;
+      font-family: "Montserrat-Regular", sans-serif;
+      font-weight: 400;
+      line-height: 1.87rem;
+    }
   }
+
+  @media (max-width:620px) {
+    .my_article__title{
+      font-size: 2rem;
+    }
+  }
+}
+
   
-  .detail_card__wrapp {
-    padding: 1.25rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-direction: column;
-  }
-  
-  .detail_card__pic {
-    display: block;
-  }
-  
-  .detail_card__img {
-    width: 100%;
-    object-fit: contain;
-  }
-  
-  .detail_card__date {
-    margin-bottom: 1.87rem;
-    color: $orange-color;
-    font-family: "Montserrat-Regular", sans-serif;
-    font-size: 1.125rem;
-    font-weight: 400;
-    line-height: 1.87rem;
-  }
-  
-  .detail_card__descript {
-    margin-bottom: 1.25rem;
-    font-size: 1rem;
-    margin-bottom: 0.625rem;
-    color: $black-color;
-    font-family: "Montserrat-Regular", sans-serif;
-    font-weight: 400;
-    line-height: 1.87rem;
-  }
