--- a/style/_header.scss
+++ b/style/_header.scss
@@ -1,7 +1,11 @@
 
 // index(header) =================
 .header{
-
+  .logo{
+    &__img{
+      max-height: 114px;
+    }
+  }
   &_top {
     display: flex;
     justify-content: space-between;
@@ -126,6 +130,9 @@
   }
 
   @media (max-width: 1000px) {
+    .logo__img{
+      width: 300px;
+    }
     .header_bottom{
       position: relative;
       justify-content: space-between;
