--- a/style/_var.scss
+++ b/style/_var.scss
@@ -4,8 +4,8 @@
 
 
 $black-color:rgb(52,52,52);
-$orange-color:rgb(234, 182, 92);
+$orange-color:#eab65c;
 $white-color:rgb(255,255,255);
-$lg-bg:rgb(253, 245, 223);
+$lg-bg:#fcf4de;
 
 $b-radius:1.5625rem;
